--- a/src/hibernate.properties
+++ b/src/hibernate.properties
@@ -3,5 +3,5 @@ hibernate.connection.url = jdbc:mysql://localhost:3306/StudentInstitute
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.connection.username = root
-hibernate.connection.password = 1234
-hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+hibernate.connection.password = Chamodi@123
+hibernate.dialect = org.hibernate.dialect.MySQL8Dialectstudent
